[package]
name = "AOC2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "Day1"
path = "src/code/day_1.rs"

[[bin]]
name = "Day2"
path = "src/code/day_2.rs"

[[bin]]
name = "Day3"
path = "src/code/day_3.rs"

[[bin]]
name = "Day4"
path = "src/code/day_4.rs"

[[bin]]
name = "Day5"
path = "src/code/day_5.rs"

[lib]
name = "utils"
path = "src/lib/mod.rs"

[dependencies]
regex = "1.11.1"